# cai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_kali-cai  README.md  fix_multiline_fstrings.py  release_to_pypi.sh  setup.cfg  test_template_loading.py
.devcontainer/: devcontainer.json
cai/: core.py  util.py.bak
cai/agents/: dfir.py  networktraffic_analyzer.py  replay_attack_agent.py
cai/prompts/: system_network_analyzer.md  system_replay_attack_agent.md
cai/rag/: vector_db.py
cai/tools/: common.py
ci/ctfs/: .ctf.yml
ci/test/: .test.yml
examples/: predefined_agent.py
examples/airline/: README.md  main.py
examples/basic/: README.md  agent_handoff.py  bare_minimum.py  context_variables.py  function_calling.py  simple_loop_no_helpers.py
examples/customer_service_streaming/: main.py  prep_data.py
examples/cybersecurity/: 1_picoctf_static_flag.py  2_picoctf_reversing_python.py  3_hackableII.py  4_bob.py  5_state.py  6_jsonl_to_graph.py  custom_agent.py
examples/personal_shopper/: README.md  database.py  main.py
examples/support_bot/: Makefile  README.md  customer_service.py  main.py  prep_data.py
examples/triage_agent/: README.md  agents.py  evals.py  run.py
examples/weather_agent/: README.md  agents.py  evals.py  run.py
tests/agents/: alias_pentesting.jsonl  kiddoctf.jsonl  test_agent_filesystem.py  test_agent_models.py  test_agent_report_ctf_fromjson.py  test_agent_report_nis2_fromjson.py  test_agents_state.py
tests/ctfs/: test_generic.py
tools/: 2_jsonl_to_memory.py  5_jsonl_to_replay.py  map_logs.py  ollama_extend_context.sh  web_logs.py
(+104 files in other folders)
