[metadata]
name = cai
version = 0.3.8
author = Alias Robotics
description = A lightweight, ergonomic framework for building Bug Bounty-level grade Cybersecurity AIs (CAIs)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    litellm>=1.65.0
    pytest
    requests
    tqdm
    pre-commit
    instructor
    wasabi
    mako
    opentelemetry-api
    pytz
    matplotlib
    pydot==1.4.2
    tokencost
    arize-phoenix
    openinference_instrumentation_openai
    qdrant_client
    scipy
    sentence_transformers
    prompt_toolkit
    mcp
    importlib-resources>=5.0.0
python_requires = >=3.10
setup_requires =
    wheel
    setuptools>=42.0.0

[options.extras_require]
report = caiextensions-report @ git+ssh://git@gitlab.com/aliasrobotics/alias_research/caiextensions/caiextensions-report.git@main
pentestperf = pentestperf @ git+ssh://git@gitlab.com/aliasrobotics/alias_research/caiextensions/pentestperf.git@main
memory = caiextensions-memory @ git+ssh://git@gitlab.com/aliasrobotics/alias_research/caiextensions/caiextensions-memory.git@main
platform = caiextensions-platform @ git+ssh://git@gitlab.com/aliasrobotics/alias_research/caiextensions/caiextensions-platform.git@main

[options.entry_points]
console_scripts =
    cai = cai.cli:main

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3
